@@ -31,22 +31,18 @@ public class PCParallelStreamStrategy
     @Override
     public List<Integer> checkIfPrimeList(List<Integer> primeCandidates,
                                           Boolean parallel) {
-        var stream = primeCandidates
-            // Create a (sequential) stream.
-            .stream();
+        var results = StreamSupport
+            // Conditionally convert the List to either a parallel or
+            // sequential stream.
+            .stream(primeCandidates.spliterator(), parallel)
 
-        // Conditionally convert the sequential stream to a parallel
-        // stream.
-        if (parallel)
-            stream.parallel();
-
-        var results = stream
             // Call the isPrime() method on each Integer in the
             // stream.
             .map(PrimeUtils::isPrime)
 
-            // Trigger intermediate operations and collect into a List.
-            .collect(toList());
+            // Trigger intermediate operations and collect into a
+            // List.
+            .toList();
 
         // Conditionally display the results.
         if (Options.instance().getDebug())
